--- a/css/split-opl.webflow.css
+++ b/css/split-opl.webflow.css
@@ -44,8 +44,9 @@ a {
   line-height: 100%;
   letter-spacing: 1px;
   text-transform: uppercase;
-  /* override font - BA edit */
-  font-family: Lora, sans-serif;
+  /* override font - BA edit 
+  font-family: Lora, sans-serif; */
+  text-align: center;
   
 }
 
