--- a/css/split-opl.webflow.css
+++ b/css/split-opl.webflow.css
@@ -1,5 +1,6 @@
 a {
-  color: #848d96;
+  /*color: #848d96;*/
+  color: #ddd;
   text-decoration: none;
 }
 
@@ -7,8 +8,10 @@ a {
   display: block;
   overflow: scroll;
   max-height: 100vh;
-  background-color: #0b1c2f;
-  font-family: Inter, sans-serif;
+  /*background-color: #0b1c2f;*/
+  background-color: #224634;
+  /*font-family: Inter, sans-serif;*/
+  font-family: Lora, serif;
   color: #ddd;
 }
 
@@ -66,7 +69,7 @@ a {
 
 .bio {
   margin-bottom: 40px;
-  font-family: Lora, sans-serif;
+  /*font-family: Lora, sans-serif;*/
   /*color: #848d96;*/
   font-size: 21px;
   line-height: 140%;
@@ -74,7 +77,7 @@ a {
 
 .text-block-2 {
   margin-bottom: 20px;
-  color: #485462;
+  /*color: #485462;*/
   font-size: 12px;
   line-height: 12px;
   letter-spacing: 2px;
@@ -82,13 +85,14 @@ a {
 }
 
 .list {
-  font-family: Lora, sans-serif;
-  color: #848d96;
+  /*font-family: Lora, sans-serif;*/
+  /*color: #848d96;*/
   font-size: 16px;
   line-height: 160%;
 }
 
 .credit {
+  /*color: #485462;*/
   color: #485462;
   font-size: 13px;
 }
@@ -145,7 +149,7 @@ a {
 }
 
 .credit-links {
-  color: #485462;
+  /*color: #485462;*/
 }
 
 .image {
