--- a/css/split-opl.webflow.css
+++ b/css/split-opl.webflow.css
@@ -15,6 +15,15 @@ a {
   color: #ddd;
 }
 
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-weight: normal;
+}
+
 .leftcontent {
   display: -webkit-box;
   display: -webkit-flex;
